--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assests/img.jpg
-  #   - assests/image.jpg
+  To add assets to your application, add an assets section, like this:
+  assets:
+    - assests/img.jpg
+    - assests/image.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
